# compound_target_pairs_dataset

./: .gitmodules  Compound_target_interactions_dataset_extraction.ipynb  Dockerfile  Leeson _dataset_calculate_properties.ipynb  Leeson data set extraction.ipynb  Leeson_dataset_calculate_properties.ipynb  Leeson_dataset_extraction.ipynb  Oral_drug_set.ipynb  README.md  environment.yml  pyproject.toml
.github/workflows/: docs.yml  lint.yml
Python/: Dockerfile  add_chembl_compound_properties.py  add_chembl_target_class_annotations.py  add_cti_annotations.py  add_dti_annotations.py  add_rdkit_compound_descriptors.py  clean_dataset.py  get_activity_ct_pairs.py  get_dataset.py  get_drug_mechanism_ct_pairs.py  get_stats.py  get_subsets.py  main.py  requirements.txt  sanity_checks.py  sanity_checks_read_write.py  test_utils.py  write_subsets.py
Python/docs/: conf.py
Python/docs/docs/: add_cti_annotations.rst  add_rdkit_compound_descriptors.rst  compound_target_pairs_database.rst  get_dataset.rst  get_subsets.rst  sanity_checks_read_write.rst
docs/: README.md
docs/source/: add_chembl_compound_properties.rst  add_filtering_columns.rst  arguments.rst  columns_docs.rst  conf.py  get_activity_ct_pairs.rst  get_drug_mechanism_ct_pairs.rst  get_stats.rst  index.rst  introduction.rst  modules.rst  output.rst  user_guide.rst  write_subsets.rst
docs/source/tables/: AggregatedValues.csv  CompoundProps.csv  CompoundProps1.csv  CompoundProps2.csv  CompoundProps3.csv  CompoundProps4.csv  DTIAnnotations.csv  DTIMechanism.csv  (+12 more)
prodrugs/: Prodrugs_curation_ChEMBL26.ipynb
src/: add_chembl_compound_properties.py  add_chembl_target_class_annotations.py  add_dti_annotations.py  add_filtering_columns.py  add_rdkit_compound_descriptors.py  arguments.py  clean_dataset.py  dataset.py  get_activity_ct_pairs.py  get_dataset.py  get_drug_mechanism_ct_pairs.py  get_stats.py  main.py  output.py  sanity_checks.py  write_subsets.py
src/docs/: README.md  index.rst
(+3 files in other folders)
